--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -336,6 +336,64 @@ body {
   margin-right: 40px;
 }
 
+/* ============== Basket ====================== */
+
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: rgba(75, 75, 75, 0.3);
+}
+
+.modal-content {
+  width: 100%;
+  max-width: 600px;
+  height: 100%;
+  background-color: #fff;
+  padding: 30px 40px;
+}
+
+.cart-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.cart-title {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.cart-close {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 5px;
+}
+.cart-close:hover {
+  opacity: 0.5;
+}
+
+.items-in-cart {
+  margin-bottom: 25px;
+}
+
+.section-title {
+  color: #59606d;
+  font-weight: 400;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
 /* ============== Media ====================== */
 
 @media screen and (max-width: 1300px) {
