--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -336,7 +336,7 @@ body {
   margin-right: 40px;
 }
 
-/* ============== Basket ====================== */
+/* ============== Modal ====================== */
 
 .modal-wrapper {
   position: fixed;
@@ -362,36 +362,189 @@ body {
   padding: 30px 40px;
 }
 
-.cart-header {
+/* ============== Basket ====================== */
+
+.basket {
+  padding: 40px 40px 50px 40px;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.cart-title {
-  font-size: 28px;
-  font-weight: 600;
-}
-
-.cart-close {
-  cursor: pointer;
-  transition: all 0.3s ease;
-  padding: 5px;
-}
-.cart-close:hover {
-  opacity: 0.5;
-}
-
-.items-in-cart {
-  margin-bottom: 25px;
+  flex-direction: column;
 }
 
 .section-title {
-  color: #59606d;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1;
+  margin-bottom: 32px;
+}
+
+.no-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.no-items-logo {
+  display: block;
+  width: 124px;
+  height: auto;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.no-items-text {
+  font-size: 16px;
+  margin-bottom: 20px;
+  font-weight: 300;
+}
+
+.checkout {
+  padding: 0px 40px 50px 40px;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.checkout-item {
+  margin-bottom: 40px;
+}
+
+.checkout-title {
+  font-size: 25px;
+  font-weight: 300;
+  margin-bottom: 25px;
+}
+
+.checkout-row {
+  display: flex;
+  width: 100%;
+  gap: 15px;
+  margin-top: 15px;
+}
+
+.checkout-input {
+  height: 42px;
+  border-radius: 6px;
+  border: 1px solid hsla(0, 0%, 59.2%, 0.5);
+  width: 100%;
+  padding: 0 15px;
+  font-size: 16px;
+  font-weight: 300;
+  color: #333;
+  transition: all 0.2s ease;
+}
+.checkout-input:focus {
+  border: 1px solid #979797;
+}
+
+.input-choose-cont {
+  position: relative;
+  width: 100%;
+}
+
+.input-choose {
+  cursor: pointer;
   font-weight: 400;
-  font-size: 18px;
-  margin-bottom: 5px;
+  color: #000;
+}
+.input-choose.active {
+  border: 1px solid #7e7e7e !important;
+}
+
+.input-icon {
+  position: absolute;
+  top: 13px;
+  width: 12px;
+  height: 12px;
+  right: 20px;
+  pointer-events: none;
+}
+
+/* ============== Checkbox ====================== */
+
+@keyframes check {
+  0% {
+    height: 0;
+    width: 0;
+  }
+  25% {
+    height: 0;
+    width: 10px;
+  }
+  50% {
+    height: 20px;
+    width: 10px;
+  }
+}
+.checkbox {
+  background-color: #fff;
+  display: inline-block;
+  height: 28px;
+  margin: 0 0.25em;
+  width: 28px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  float: right;
+}
+.checkbox span {
+  display: block;
+  height: 28px;
+  position: relative;
+  width: 28px;
+  padding: 0;
+}
+.checkbox span:after {
+  -moz-transform: scaleX(-1) rotate(135deg);
+  -ms-transform: scaleX(-1) rotate(135deg);
+  -webkit-transform: scaleX(-1) rotate(135deg);
+  transform: scaleX(-1) rotate(135deg);
+  -moz-transform-origin: left top;
+  -ms-transform-origin: left top;
+  -webkit-transform-origin: left top;
+  transform-origin: left top;
+  border-right: 4px solid #fff;
+  border-top: 4px solid #fff;
+  content: "";
+  display: block;
+  height: 20px;
+  left: 3px;
+  position: absolute;
+  top: 15px;
+  width: 10px;
+}
+.checkbox span:hover:after {
+  border-color: #999;
+}
+.checkbox input {
+  display: none;
+}
+.checkbox input:checked + span:after {
+  -webkit-animation: check 0.8s;
+  -moz-animation: check 0.8s;
+  -o-animation: check 0.8s;
+  animation: check 0.8s;
+  border-color: #555;
+}
+.checkbox input:checked + .default:after {
+  border-color: #444;
+}
+.checkbox input:checked + .primary:after {
+  border-color: #2196f3;
+}
+.checkbox input:checked + .success:after {
+  border-color: #8bc34a;
+}
+.checkbox input:checked + .info:after {
+  border-color: #3de0f5;
+}
+.checkbox input:checked + .warning:after {
+  border-color: #ffc107;
+}
+.checkbox input:checked + .danger:after {
+  border-color: #f44336;
 }
 
 /* ============== Media ====================== */
