--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -143,6 +143,18 @@ body {
   opacity: 0.7;
 }
 
+.btn-red.outlined {
+  color: red;
+  background: #fff;
+  border: solid 1px red;
+  font-weight: 300;
+}
+.btn-red.outlined:hover {
+  opacity: 1;
+  color: #fff;
+  background: red;
+}
+
 .basket-container {
   display: flex;
   flex-direction: column;
@@ -551,7 +563,6 @@ body {
 
 .items {
   padding: 24px 0;
-  border-bottom: 1px solid hsla(0, 0%, 59.2%, 0.6);
 }
 
 .backet-item {
@@ -563,6 +574,9 @@ body {
   text-align: center;
   width: 100%;
   color: #333;
+  padding: 20px 0px 15px 0px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid hsla(0, 0%, 59.2%, 0.6);
 }
 
 .backet-item--img {
@@ -634,6 +648,77 @@ body {
   font-size: 24px;
   font-weight: 400;
   margin-left: 8px;
+}
+
+.summary {
+  max-width: 340px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+}
+
+.summary-item {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 300;
+  font-size: 18px;
+  margin-bottom: 4px;
+}
+
+.summary-item.bold {
+  font-weight: 400;
+  font-size: 24px;
+  margin-top: 10px;
+  margin-bottom: 24px;
+}
+
+.summary-btn {
+  width: 100%;
+}
+
+.services {
+  width: 100%;
+  margin-top: 18px;
+  color: #979797;
+}
+
+.service-title {
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.service {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.agreements {
+  margin-top: 60px;
+  color: #979797;
+  font-weight: 300;
+  line-height: 1.42;
+  font-size: 15px;
+}
+
+.agreement {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.agreement-text {
+  margin-left: 10px;
 }
 
 /* ============== Media ====================== */
