--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -752,3 +752,24 @@ body {
     margin: 30px 0px 10px 0px;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .checkout-row {
+    flex-direction: column;
+  }
+  .backet-item {
+    flex-direction: column;
+  }
+  .item-prices--col {
+    margin: 0px 20px 0px 0px;
+  }
+  .backet-item--title span {
+    margin-top: 5px;
+    margin-left: 15px;
+  }
+  .backet-item--title button {
+    width: 100%;
+    margin-bottom: 10px;
+    justify-content: flex-end;
+  }
+}
